code/human_written_tests/WebAssembly/processed_control_flow_validation/test_call_7.wast
(assert_invalid
  (module
    (func $type-first-void-vs-num (call 1 (nop) (i32.const 1)))
    (func (param i32 i32))
  )
  "type mismatch"
)